clusters/common/apps/flux-system/notifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${LOCATION}-flux-webhook
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: "common"
spec:
  defaultBackend:
    service:
      name: webhook-receiver
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - ${LOCATION}-flux-webhook
